src/css/style.css
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  position: relative;
}

header {
  background: #02d4b1;
  color: #eee;
  padding: 2.5rem 0;
  margin-bottom: 2rem;
}
h2 {
  font-weight: 500;
  margin-bottom: 0;
  margin-top: 0;
}
h4 {
  font-weight: 300;
  margin-top: 0.5rem;
  margin-bottom: 0;
}
.container {
  width: 80%;
  margin: auto;
}
input,
textarea {
  width: 100%;
  padding: 0.5rem;
  outline: none;
  border: none;
  border: 1px solid #ccc;
  border-radius: 5px;
  margin: 0.5rem 0;
}
textarea {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
}
label {
  font-size: 0.75rem;
  font-weight: bold;
}
select {
  margin: 0.5rem 0;
  padding: 0.25rem;
  display: block;
}
button {
  padding: 0.5rem 0.5rem;
  color: #eee;
  outline: none;
  border: none;
  background-color: #02d4b1;
  border-radius: 5px;
}
.btn {
  text-decoration: none;
  padding: 0.5rem 0.5rem;
  color: #eee;
  outline: none;
  border: none;
  background-color: #02d4b1;
  border-radius: 5px;
}
.nav {
  display: flex;
  justify-content: space-between;
}
.city {
  color: #333;
  border: #333 1px solid;
  background: #fff;
  cursor: pointer;
}
.city.active {
  color: #02d4b1;
  background: #fff;
  border: #02d4b1 1px solid;
}
.properties {
  margin-top: 2rem;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  gap: 1rem;
}

.property {
  min-width: 16.66%;
  box-shadow: 0px 2px 10px 1px #ccc;
  transition: transform 0.2s ease;
}
.property:hover {
  transform: scale(1.02);
}
.property img {
  width: 100%;
  height: 150px;
  object-fit: cover;
}
.prop-text {
  padding: 2rem 1rem;
}
#status {
  display: none;
}
form {
  margin-bottom: 3rem;
}

